--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 </div>
 </nav>
 
-<div class="content" data-ice="content"><div data-ice="index" class="github-markdown"><h1 id="simple-deep-assign">simple-deep-assign</h1><p>A very simple alternative of <code>Object.assign()</code> that recursively copies objects&apos; elements to a target object.  Recursion is only applied to a pure object.  The other types of elements are just replaced with source elements.</p>
+<div class="content" data-ice="content"><div data-ice="index" class="github-markdown"><h1 id="simple-deep-assign">simple-deep-assign</h1><p><a href="https://codecov.io/gh/ygoto3/simple-deep-assign"><img src="https://img.shields.io/codecov/c/github/ygoto3/simple-deep-assign/master.svg" alt="Codecov master"></a></p>
+<p>A very simple alternative of <code>Object.assign()</code> that recursively copies objects&apos; elements to a target object.  Recursion is only applied to a pure object.  The other types of elements are just replaced with source elements.</p>
 <h2 id="install">Install</h2><pre><code class="lang-sh"><code class="source-code prettyprint">$ npm i simple-deep-assign</code>
 </code></pre>
 <h2 id="usage">Usage</h2><pre><code class="lang-js"><code class="source-code prettyprint">import deepAssign from &apos;simple-deep-assign&apos;;
